8218185: aarch64: missing LoadStore barrier in TemplateTable::putfield_or_static Reviewed-by: aph Contributed-by: lunliu93@gmail.com